make the test data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,11 +7,6 @@ spring.jpa.properties.hibernate.generate_statistics=true
 #H2 database
 spring.h2.console.path=/h2-console
 spring.h2.console.enabled=true
-
-# Payment gateways
-nosso-servico-de-pagamentos.gateways.hyoga=4.0
-nosso-servico-de-pagamentos.gateways.saori=0.01
-nosso-servico-de-pagamentos.gateways.seya=5.0
-nosso-servico-de-pagamentos.gateways.shiryu=3.5
-nosso-servico-de-pagamentos.gateways.shun=4.0
-nosso-servico-de-pagamentos.gateways.tango=5.0
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
