isolate cache ttl and create requestTemplate factory

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
+
+# Payment Gateways factory
+payment.gateway.resttemplate.timeout=2000
